force-app/main/default/objects/CC_ConversationUnit__c/CC_ConversationUnit__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena la información de las llamadas para la integración con el equipo de cognitivo y el sistema de logs</description>
    <label>Conversation Unit</label>
    <nameField>
        <displayFormat>CU-{000000}</displayFormat>
        <label>Converstion Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>