force-app/main/default/objects/CC_ConversationUnit__c/fields/CC_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CC_Feedback__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
                <label>Respuesta satisfactoria</label>
            </value>
            <value>
                <fullName>KO</fullName>
                <label>Código obsoleto</label>
            </value>
            <value>
                <fullName>ESC</fullName>
                <label>Escalado a Click2Call</label>
            </value>
            <value>
                <fullName>TO</fullName>
                <label>Timeout</label>
            </value>
            <value>
                <fullName>CTO</fullName>
                <label>Timeout en Click2Call</label>
            </value>
            <value>
                <fullName>C2C</fullName>
                <label>El usuario selecciona un Click2Call</label>
            </value>
            <value>
                <fullName>C2K</fullName>
                <label>Click2Call a un teléfono erróneo</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Error al invocar la operación</label>
            </value>
            <value>
                <fullName>QGO</fullName>
                <label>La consulta se ha redirigido a QGO</label>
            </value>
            <value>
                <fullName>CHE</fullName>
                <label>Conversación de Chat acabada correctamente</label>
            </value>
            <value>
                <fullName>CHL</fullName>
                <label>Conversación de Chat acabada de forma inesperada</label>
            </value>
            <value>
                <fullName>GFO</fullName>
                <label>FAQ Guiada considerada útil por el usuario</label>
            </value>
            <value>
                <fullName>DFO</fullName>
                <label>Diálogo de Watson Assistant considerado útil por el usuario</label>
            </value>
            <value>
                <fullName>GFN</fullName>
                <label>FAQ Guiada considerada no útil por el usuario</label>
            </value>
            <value>
                <fullName>DFN</fullName>
                <label>Diálogo de Watson Assistant considerado no útil por el usuario</label>
            </value>
            <value>
                <fullName>HAE</fullName>
                <label>Hidden Agent termina la conversación. Código obsoleto</label>
            </value>
            <value>
                <fullName>HANS</fullName>
                <label>Hidden Agent termina la conversación. Respuesta no soportada</label>
            </value>
            <value>
                <fullName>AGE</fullName>
                <label>Chat Agent termina la conversación. Código obsoleto</label>
            </value>
            <value>
                <fullName>AGNS</fullName>
                <label>Chat Agent termina la conversación. Respuesta no soportada</label>
            </value>
            <value>
                <fullName>CLS</fullName>
                <label>El usuario ha cerrado la ventana sin finalizar la conversación</label>
            </value>
            <value>
                <fullName>CLHA</fullName>
                <label>El usuario ha cerrado la ventana cuando había una sesión con un Hidden Agent establecida</label>
            </value>
            <value>
                <fullName>CLC</fullName>
                <label>El usuario ha cerrado la ventana cuando había una sesión con un Chat Agent establecida</label>
            </value>
            <value>
                <fullName>CRJ</fullName>
                <label>El usuario rechaza contactar con un agente tras mostrarse la lista de escalado</label>
            </value>
            <value>
                <fullName>HIS</fullName>
                <label>El usuario ha seleccionado una FAQ o documento histórico</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>El usuario ha cancelado la conversación actual para cambiar su consulta</label>
            </value>
            <value>
                <fullName>EMC</fullName>
                <label>El usuario selecciona el click to call de emergencia</label>
            </value>
            <value>
                <fullName>EMK</fullName>
                <label>Click to call de emergencia con error</label>
            </value>
            <value>
                <fullName>ENE</fullName>
                <label>Se termina la conversación al no haber opciones de escalado</label>
            </value>
            <value>
                <fullName>HACAT</fullName>
                <label>Hidden Agent contesta con una respuesta del catálogo</label>
            </value>
            <value>
                <fullName>AGCAT</fullName>
                <label>Chat Hidden Agent contesta con una respuesta del catálogo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>