force-app/main/default/objects/CC_ConversationUnit__c/fields/CC_Intent__c.field-meta.xml
<CustomField>
    <fullName>CC_Intent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que relaciona la unidad minima de conversation unit con su detalle (de hijo a padre)</description>
    <label>Intent</label>
    <referenceTo>CC_ConversationUnit__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>