force-app/main/default/objects/CC_ConversationUnit__c/fields/CC_Llamada__c.field-meta.xml
<CustomField>
    <fullName>CC_Llamada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Llamada</label>
    <referenceTo>CC_Llamada__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>