force-app/main/default/objects/CC_ConversationUnit__c/fields/CC_Texto__c.field-meta.xml
<CustomField>
    <fullName>CC_Texto__c</fullName>
    <description>Contenido de la unidad mínima de la conversacion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>