force-app/main/default/objects/CC_ConversationUnit__c/recordTypes/CC_ConversationDetail.recordType-meta.xml
<RecordType>
    <fullName>CC_ConversationDetail</fullName>
    <active>true</active>
    <description>Detalle de la conversación, puede contener unidades de conversación</description>
    <label>Conversation Detail</label>
</RecordType>