force-app/main/default/objects/CC_ConversationUnit__c/recordTypes/CC_ConversationUnit.recordType-meta.xml
<RecordType>
    <fullName>CC_ConversationUnit</fullName>
    <active>true</active>
    <description>Unidad mínima del objeto Conversacion relacionado con el objeto Llamada</description>
    <label>Conversation Unit</label>
</RecordType>